[gd_scene load_steps=9 format=3 uid="uid://copdw54bw82g5"]

[ext_resource type="Shader" path="res://assets/blur.gdshader" id="1_cgp8k"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_nad7j"]
[ext_resource type="Theme" uid="uid://cqf8rlu6phrvp" path="res://assets/themes/button_theme.tres" id="3_1iwq0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u0c02"]
shader = ExtResource("1_cgp8k")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f0kso"]
content_margin_left = 45.0
content_margin_top = 25.0
content_margin_right = 45.0
content_margin_bottom = 25.0
bg_color = Color(0.490196, 0.658824, 0.388235, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_vng8p"]
length = 0.3

[sub_resource type="Animation" id="Animation_4ke6t"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.255]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m5q75"]
_data = {
"RESET": SubResource("Animation_vng8p"),
"blur": SubResource("Animation_4ke6t")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nad7j")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_u0c02")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.5
offset_top = -134.0
offset_right = 128.5
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
theme_override_styles/panel = SubResource("StyleBoxFlat_f0kso")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_1iwq0")
text = "Resume"

[node name="replay" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_1iwq0")
text = "Replay"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_1iwq0")
text = "Quit"

[node name="BlurAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m5q75")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
